--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
                             </li>
                             <li>
                                 <a href="#" title="Me siga no Facebook">
-                                    <img src="./images/Facebook.png" alt="Logo do Facebook"/></a>
+                                    <img src="./images/facebook.png" alt="Logo do Facebook"/></a>
                             </li>
                             <li>
                                 <a href="#" title="Inscreva-se no meu canal no YouTube">
-                                    <img src="./images/YouTube.png" alt="Logo do YouTube"/></a>
+                                    <img src="./images/youtube.png" alt="Logo do YouTube"/></a>
                             </li>
                         </ul>
                     </p>
